<resources>
    <string name="app_name">Barcode Generator</string>
    <string name="barcode_generrator">BARCODE GENERRATOR</string>
    <string name="barcode_generator" />
    <string name="barcode_generator1">BARCODE GENERATOR</string>
    <string name="app_logo">App Logo</string>
    <string name="barcode_generator2">BARCODE GENERATOR</string>
    <string name="app_logo1">App Logo</string>
    <string name="barcode_generator3">BARCODE GENERATOR</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up1">Sign Up</string>
    <string name="don_t_have_an_account1">Don\'t have an account?</string>
    <string name="login1">LOGIN</string>
    <string name="forgot_password1">Forgot Password?</string>
    <string name="password1">Password</string>
    <string name="email_or_username1">Email or Username</string>
    <string name="login_to_your_account1">Login to your account</string>
    <string name="barcode_generator4">BARCODE GENERATOR</string>
    <string name="app_logo3">App Logo</string>
    <string name="login2">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up2">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password2">Password</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="create_your_account">Create your account</string>
    <string name="barcode_generator5">BARCODE GENERATOR</string>
    <string name="app_logo5">App Logo</string>
    <string name="remember_your_password">Remember your password?</string>
    <string name="back_to_login">Back to Login</string>
    <string name="send_reset_link">SEND RESET LINK</string>
    <string name="email_address1">Email Address</string>
    <string name="enter_your_email_address_and_we_ll_send_you_a_link_to_reset_your_password">Enter your email address and we\'ll send you a link to reset your password.</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="barcode_generator6">BARCODE GENERATOR</string>
    <string name="app_logo6">App Logo</string>
    <string name="app_logo7">App Logo</string>
    <string name="barcode_generator7">BARCODE GENERATOR</string>
    <string name="code_93">Code 93</string>
    <string name="code_11">Code 11</string>
    <string name="codabar">Codabar</string>
    <string name="upc_a">UPC-A</string>
    <string name="ean_8">EAN-8</string>
    <string name="code_39">Code 39</string>
    <string name="code_128">Code 128</string>
    <string name="ean_13">EAN-13</string>
    <string name="more"><![CDATA[More >]]></string>
    <string name="fast_barcode_creation">Fast Barcode Creation</string>
    <string name="create_nqr_code">Create\nQR Code</string>
    <string name="create_qr_code">Create QR Code</string>
    <string name="history">History</string>
    <string name="history1">History</string>
    <string name="scan">Scan</string>
    <string name="scan1">Scan</string>
    <string name="create_nbarcode">Create\nBarcode</string>
    <string name="create_barcode">Create Barcode</string>
    <string name="menu">Menu</string>
    <string name="barcode_generator8">BARCODE GENERATOR</string>
    <string name="app_icon">App Icon</string>
    <string name="settings">Settings</string>
    <string name="family_apps_ad">Family Apps (AD)</string>
    <string name="share_app">Share App</string>
    <string name="favorite">Favorite</string>
    <string name="history2">History</string>
    <string name="settings1">Settings</string>
    <string name="family_apps_ad1">Family Apps (AD)</string>
    <string name="share_app1">Share App</string>
    <string name="favorite1">Favorite</string>
    <string name="history3">History</string>
    <string name="history4">History</string>
    <string name="favorite2">Favorite</string>
    <string name="share_app2">Share App</string>
    <string name="settings2">Settings</string>
    <string name="favorite4">Favorite</string>
    <string name="share_app4">Share App</string>
    <string name="settings3">Settings</string>
    <string name="history5">History</string>
    <string name="privacy_data"><![CDATA[Privacy & Data]]></string>
    <string name="barcode_scanner_v1_0">Barcode Scanner v1.0</string>
    <string name="log_out">Log Out</string>
    <string name="next">Next</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy">Privacy</string>
    <string name="next1">Next</string>
    <string name="export_scan_history">Export Scan History</string>
    <string name="export">Export</string>
    <string name="next2">Next</string>
    <string name="clear_scan_history">Clear Scan History</string>
    <string name="clear">Clear</string>
    <string name="auto_copy_to_clipboard">Auto-copy to Clipboard</string>
    <string name="sound_on_scan">Sound on Scan</string>
    <string name="vibration_on_scan">Vibration on Scan</string>
    <string name="auto_save_scans">Auto-save Scans</string>
    <string name="app_preferences">App Preferences</string>
    <string name="john_doe_example_com">john.doe@example.com</string>
    <string name="john_doe">John Doe</string>
    <string name="user">User</string>
    <string name="user_profile">User Profile</string>
    <string name="settings12">Settings</string>
    <string name="back">Back</string>
    <string name="privacy_data1"><![CDATA[Privacy & Data]]></string>
</resources>